--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,132 @@
 {
-    "plugins": [
-        "office-addins"
-    ],
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
     "extends": [
-        "plugin:office-addins/react"
-    ]
+        "plugin:react/recommended",
+        "airbnb-typescript",
+        "airbnb",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "project": [
+            "tsconfig.json"
+        ],
+        "ecmaVersion": 12,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+        "react-hooks"
+    ],
+    "rules": {
+        "linebreak-style": "off",
+        "jsx-quotes": [
+            "error",
+            "prefer-single"
+        ],
+        "react/jsx-curly-brace-presence": "off",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-explicit-any": "off",
+        "no-unused-vars": "off",
+        "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "no-alert": "off",
+        "no-multiple-empty-lines": "warn",
+        "quote-props": "off",
+        "no-continue": "off",
+        "camelcase": "off",
+        "indent": [
+            0
+        ],
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/indent": [
+            "error",
+            4
+        ],
+        "react/function-component-definition": [
+            0
+        ],
+        "react/no-unused-class-component-methods": [
+            0
+        ],
+        "react/no-invalid-html-attribute": [
+            0
+        ],
+        "react/no-arrow-function-lifecycle": [
+            0
+        ],
+        "import/extensions": [
+            0
+        ],
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx",
+                    ".tsx"
+                ]
+            }
+        ],
+        "react/state-in-constructor": "off",
+        "react/jsx-indent": [
+            1,
+            4
+        ],
+        "react/prop-types": [
+            0
+        ],
+        "react/jsx-indent-props": [
+            1,
+            4
+        ],
+        "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+        "react-hooks/exhaustive-deps": "warn", // Checks effect 
+        "arrow-body-style": [
+            0
+        ],
+        "click-events-have-key-events": [
+            0
+        ],
+        "react/jsx-props-no-spreading": [
+            0
+        ],
+        "react/destructuring-assignment": 0,
+        "import/prefer-default-export": 0,
+        "react/jsx-max-props-per-line": [
+            1,
+            {
+                "maximum": 2
+            }
+        ],
+        "react/no-unescaped-entities": [
+            "error",
+            {
+                "forbid": [
+                    {
+                        "char": "'",
+                        "alternatives": [
+                            "&apos;"
+                        ]
+                    }
+                ]
+            }
+        ]
+    }
 }
+// {
+//     "plugins": [
+//         "office-addins"
+//     ],
+//     "extends": [
+//         "plugin:office-addins/react"
+//     ]
+// }
