--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
         "@fluentui/react": "^8.52.3",
         "core-js": "^3.9.1",
         "es6-promise": "^4.2.8",
+        "exceljs": "^4.3.0",
+        "file-saver": "^2.0.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.13.1",
