--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dependencies": {
         "@fluentui/font-icons-mdl2": "^8.5.8",
         "@fluentui/react": "^8.52.3",
+        "mobx": "^6.6.2",
+        "mobx-react-lite": "^3.4.0",
         "core-js": "^3.9.1",
         "es6-promise": "^4.2.8",
         "exceljs": "^4.3.0",
@@ -34,6 +36,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.13.1",
+        "react-router-dom": "^6.1.1",
         "regenerator-runtime": "^0.13.7"
     },
     "devDependencies": {
