--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "eslint.validate": [
-      "javascript",
-      "javascriptreact",
-      "typescript"
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact",
     ]
-  }
-  
+}
