--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "dependencies": {
         "@fluentui/font-icons-mdl2": "^8.5.8",
         "@fluentui/react": "^8.52.3",
-        "mobx": "^6.6.2",
-        "mobx-react-lite": "^3.4.0",
         "core-js": "^3.9.1",
         "es6-promise": "^4.2.8",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
+        "loadash": "^1.0.0",
+        "mobx": "^6.6.2",
+        "mobx-react-lite": "^3.4.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.13.1",
