--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
         "typescript": "^4.3.5",
         "webpack": "^5.73.0",
         "webpack-cli": "^4.8.0",
-        "webpack-dev-server": "4.7.4"
+        "webpack-dev-server": "4.7.4",
+        "webpack-xlsx-loader": "^1.0.0"
     },
     "browserslist": [
         "ie 11"
