--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
         "loadash": "^1.0.0",
         "mobx": "^6.6.2",
         "mobx-react-lite": "^3.4.0",
+        "number-to-cyrillic": "^2.7.0",
         "office-addin-dev-certs": "^1.11.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.13.1",
         "react-router-dom": "^6.1.1",
-        "regenerator-runtime": "^0.13.7"
+        "regenerator-runtime": "^0.13.7",
+        "to-words": "^3.5.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
