--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
         "watch": "webpack --mode development --watch"
     },
     "dependencies": {
-        "@fluentui/font-icons-mdl2": "^8.5.8",
         "@fluentui/react": "^8.52.3",
         "core-js": "^3.9.1",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
+        "jspdf": "^2.5.1",
         "loadash": "^1.0.0",
         "mobx": "^6.6.2",
         "mobx-react-lite": "^3.4.0",
@@ -40,7 +40,7 @@
         "react-hot-loader": "^4.13.1",
         "react-router-dom": "^6.1.1",
         "regenerator-runtime": "^0.13.7",
-        "to-words": "^3.5.0"
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
