--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "core-js": "^3.9.1",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
-        "jspdf": "^2.5.1",
+        "formik": "^2.4.0",
         "loadash": "^1.0.0",
         "mobx": "^6.6.2",
         "mobx-react-lite": "^3.4.0",
@@ -39,8 +39,7 @@
         "react-dom": "^17.0.2",
         "react-hot-loader": "^4.13.1",
         "react-router-dom": "^6.1.1",
-        "regenerator-runtime": "^0.13.7",
-        "xlsx": "^0.18.5"
+        "regenerator-runtime": "^0.13.7"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
