--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,8 @@
 {
-  "presets": ["@babel/preset-typescript"]
+    "presets": [
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "react-refresh/babel"
+    ]
 }
