--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
     },
     "dependencies": {
         "@fluentui/react": "^8.52.3",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
         "core-js": "^3.9.1",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
-        "formik": "^2.4.0",
+        "formik": "^2.4.3",
         "loadash": "^1.0.0",
         "mobx": "^6.6.2",
         "mobx-react-lite": "^3.4.0",
         "number-to-cyrillic": "^2.7.0",
         "office-addin-dev-certs": "^1.11.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-hot-loader": "^4.13.1",
+        "react": "^18.0.2",
+        "react-dom": "^18.0.2",
+        "react-refresh": "^0.14.0",
         "react-router-dom": "^6.1.1",
         "regenerator-runtime": "^0.13.7"
     },
@@ -46,14 +47,12 @@
         "@babel/preset-typescript": "^7.13.0",
         "@types/office-js": "^1.0.256",
         "@types/office-runtime": "^1.0.23",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
-        "@types/react-hot-loader": "^4.1.1",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "@types/webpack": "^4.4.34",
         "@types/webpack-dev-server": "^4.1.0",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
-        "acorn": "^8.5.0",
         "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^9.0.1",
         "eslint": "^8.3.0",
