--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "loadash": "^1.0.0",
         "mobx": "^6.6.2",
         "mobx-react-lite": "^3.4.0",
+        "nanoid": "^5.0.3",
         "number-to-cyrillic": "^2.7.0",
         "office-addin-dev-certs": "^1.11.2",
         "react": "^18.0.2",
