--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "start:web": "office-addin-debugging start manifest.xml web",
         "stop": "office-addin-debugging stop manifest.xml",
         "validate": "office-addin-manifest validate manifest.xml",
-        "watch": "webpack --mode development --watch"
+        "watch": "webpack --mode development --watch",
+        "push-dir": "push-dir --dir=dist --branch=gh-pages --force --verbose"
     },
     "dependencies": {
         "@fluentui/react": "^8.52.3",
