--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
         "react-dom": "^18.0.2",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.1.1",
-        "regenerator-runtime": "^0.13.7"
+        "regenerator-runtime": "^0.13.7",
+        "xml2js": "^0.5.0"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
