--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,7 +13,9 @@ test_script:
 
 deploy_script: # скрипт развёртывания
     - git config --global credential.helper store
-    - git config --global user.name AppVeyor
-    - git config --global user.email ci@appveyor.com
+    - git config --global user.name KirillKazakoff
+    - git config --global user.email kekazavr228@gmail.com
+    # - git config --global user.name AppVeyor
+    # - git config --global user.email ci@appveyor.com
     - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
     - yarn run push-dir --dir=dist --branch=gh-pages --force --verbose
