--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "jsx": "react",
         "module": "esnext",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "outDir": "dist",
         "removeComments": false,
         "sourceMap": true,
