--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@types/react-dom": "^18.0.0",
         "@types/webpack": "^4.4.34",
         "@types/webpack-dev-server": "^4.1.0",
+        "@types/xml2js": "^0.4.14",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "babel-loader": "^8.2.2",
