invoiceKTI tmp refactored

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "office-addin-dev-certs": "^1.11.2",
         "react": "^18.0.2",
         "react-dom": "^18.0.2",
+        "react-dropzone": "^14.2.3",
         "react-refresh": "^0.14.0",
         "react-router-dom": "^6.1.1",
         "regenerator-runtime": "^0.13.7",
@@ -52,7 +53,7 @@
         "@babel/preset-typescript": "^7.13.0",
         "@types/office-js": "^1.0.256",
         "@types/office-runtime": "^1.0.23",
-        "@types/react": "^18.0.0",
+        "@types/react": "^18.3.3",
         "@types/react-dom": "^18.0.0",
         "@types/webpack": "^4.4.34",
         "@types/webpack-dev-server": "^4.1.0",
